<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ad_hidden_and_ready_to_load_again">Ad is hidden and ready to load again</string>
    <string name="app_name">LoopMe X</string>
    <string name="about_dialog_import_button">Import</string>
    <string name="about_dialog_export_button">Export</string>
    <string name="fragment_export_title">Export file of AppKeys</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="ad_spots">Ad Spots</string>
    <string name="fragment_export_path_example">path</string>
    <string name="change_permissions_import">To allow import change permissions in App Settings!</string>
    <string name="change_permissions_export">To allow export change permissions in App Settings!</string>
    <string name="folder_already_exists">Folder already exists.</string>
    <string name="dialog_title_import">Import file of AppKeys</string>
    <string name="filemodel_file_name_example">file name</string>
    <string name="fragment_export_new_folder_button">New Folder</string>
    <string name="fragment_export_cancel_button">Cancel</string>
    <string name="fragment_import_ok_button">OK</string>
    <string name="about_dialog_clear_cache_button">Clear cache</string>
    <string name="about_dialog_check_update">Check for update</string>
    <string name="fragment_info_tester_version">Tester Version: %1$s.%2$d</string>
    <string name="fragment_info_loopme_sdk_version">LoopMe SDK: %1$s</string>
    <string name="fragment_info_mopub_sdk_version">Mopub SDK: %1$s</string>
    <string name="enter_folder_name">Enter folder name.</string>
    <string name="cache_removed">Cache removed</string>
    <string name="empty_ad_spot_name">\"Empty Ad Spot Name\"</string>
    <string name="enter_new_folder_name">Enter folder name</string>
    <string name="default_file_name_appkeys">AppKeys</string>
    <string name="failed_1">Failed: %1$d</string>
    <string name="showed_1">Showed: %1$d</string>
    <string name="requests_1">Requests: %1$d</string>
    <string name="request_counter_2">Request %1$d of %2$d</string>
    <string name="save">Save</string>
    <string name="new_ad_spot">New Ad Spot</string>
    <string name="name">Name</string>
    <string name="sdk">SDK</string>
    <string name="loopme">LoopMe</string>
    <string name="mopub">Mopub</string>
    <string name="interstitial">Interstitial</string>
    <string name="ad_type">Ad Type</string>
    <string name="banner">Banner</string>
    <string name="show">Show</string>
    <string name="ad_hided_and_ready_to_load_again">Ad hided and ready to load again</string>
    <string name="hide">Hide</string>
    <string name="ad_is_shown">Ad is shown</string>
    <string name="ad_loaded">Ad loaded</string>
    <string name="to_save_adspot_fill_fields">To save ad spot all fields must be initialized</string>
    <string name="appkey_is_to_short">"Appkey length is to short"</string>
    <string name="empty_string" />

    <string name="fragment_import_cancel_button">Cancel</string>
    <string name="fragment_import_path_example">path</string>
    <string name="exported_successfully">Exported  successfully</string>
    <string name="imported_successfully">Imported successfully</string>
    <string name="folder_successfully_created">Folder successfully created</string>

    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="ready_to_loading">Ready to loading</string>
    <string name="ad_expired">Ad is Expired</string>
    <string name="loading">Loading...</string>
    <string name="ad_is_not_ready">Ad is not ready</string>
    <string name="error">Error</string>
    <string name="search">Search</string>
    <string name="read_file_error">Read file error</string>
    <string name="save_file_error">Save file error</string>
    <string name="status_loading_auto">Loading...</string>
    <string name="stop_button_auto">Stop</string>
    <string name="failed">Failed:</string>
    <string name="showed">Showed:</string>
    <string name="requests">Requests:</string>
    <string name="amount_of_ad_requests">Amount of ad requests:</string>
    <string name="time_s_when_ad_should_be_auto_closed">Time(s) when ad should be auto closed:</string>
    <string name="time_s_between_ad_requests">Time(s) between ad requests:</string>
    <string name="ad_type_info">Ad Type</string>
    <string name="load_textview_manual">Load</string>
    <string name="auto_testing_finished">Auto testing finished</string>
    <string name="about_show_log_button">Show log</string>
    <string name="fragment_log_title">Events log</string>
    <string name="log_file_is_empty">Log file is empty.</string>
    <string name="log_hint_example">Hier shoud be events log and other staff</string>
    <string name="adspot_already_exists">AdSpot already exists</string>
    <string name="app_key_example">app key</string>
    <string name="run_ad_auto_button">Run</string>
    <string name="adunitid">AdUnitId</string>
    <string name="baseurl">BaseUrl</string>
    <string name="base_url">Base Url</string>
    <string name="app_key">App Key</string>
    <string name="appkey">AppKey</string>
    <string name="files_name_is_empty">Files name is empty</string>
    <string name="delete_adspot">Remove Ad Spot</string>
    <string name="remove_adspot">Remove Ad Spot?</string>
    <string name="remove_pattern">Remove %1$s?</string>
    <string name="waiting">Waiting...</string>
    <string name="to_see_log_change_permission">To see log change permissions in App Settings!</string>
    <string name="ad_request_amount_is_not_valid">Amount of ad request value is not valid</string>
    <string name="time_between_request_is_not_valid">Time between requests value is not valid</string>
    <string name="auto_close_time_is_not_valid">Auto close time value is not valid</string>
    <string name="test_interstitial_360">Test Interstitial 360</string>
    <string name="test_html_mpu">HTML MPU</string>
    <string name="test_native_mpu">Native MPU</string>
    <string name="test_html_rich_media_interstitial">HTML Rich Media</string>
    <string name="test_native_interstital">Native interstitial</string>
    <string name="test_dv_vast">DV test vast</string>
    <string name="vpaid_video">VPaid video</string>
    <string name="rich_media">HTML RichM</string>
    <string name="test_vpaid">Vpaid video</string>
    <string name="test_mpu">Mpu</string>
    <string name="test_360">Video 360</string>
    <string name="landscape_interstitial">Landscape interstitial</string>
    <string name="portrait_interstitial">Portrait interstitial</string>
    <string name="enable_auto_loading">Enable auto loading</string>
    <string name="dialog_size_hint_width">Width</string>
    <string name="dialog_size_hint_height">Height</string>
    <string name="native_video">Native Video Interstitial</string>
    <string name="html_none_gwd">HTML non GWD Interstitial</string>
    <string name="html_gwd">HTML GWD Interstitial</string>

    <string name="html_banner_expand">HTML Banner</string>
    <string name="native_video_banner">Native Video Banner</string>
    <string name="image_fullscreen">Image Interstitial</string>
    <string name="image_banner">Image Banner</string>
    <string name="update_dialog_title">Update</string>
    <string name="update_dialog_message">There is a newer version of the tester. Would you like to update it now?</string>
    <string name="update_dialog_oupdate_button">Update</string>
    <string name="update_dialog_close_button">Close</string>
    <string name="update_dialog_no_updates_messege">No updates available.</string>
    <string name="update_dialog_ok_button">OK</string>
    <string name="fragment_qr_controls_title">Scan QR Code</string>
    <string name="ad_url_example">Ad Url</string>
    <string name="qr_watch_again_text">Watch again.</string>
    <string name="app_key_name_video_full_screen">Video FullScreen</string>
    <string name="app_key_name_html_video">HTML Video</string>
    <string name="app_key_name_image_full_screen">Image FullScreen</string>
    <string name="app_key_name_image_banner_mpu">Image 300x250</string>
    <string name="app_key_name_expandable_banner">Expandable 320x50</string>
    <string-array name="ad_types">
        <item>ALL</item>
        <item>HTML</item>
        <item>VIDEO</item>
    </string-array>

    <string-array name="integration_type">
        <item>IGNORE</item>
        <item>INIT</item>
        <item>CONSENT_TRUE</item>
        <item>CONSENT_FALSE</item>
    </string-array>
</resources>
