<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dialog_new_folder_fragment_layout_width"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bordered"

        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_new_folder_titel_heigth"
            android:background="@drawable/background_buttons"
            android:gravity="center"
            android:text="@string/create_new_folder"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fragment_new_folder_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_new_folder_name"
            android:padding="@dimen/fragment_new_folder_edittext_padding" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_new_folder_edit_layout_margin_bottom">

            <Button
                android:id="@+id/create_cancel_button"
                android:layout_width="@dimen/create_cancel_button_width"
                android:layout_height="@dimen/create_cancel_button_height"
                android:layout_marginLeft="@dimen/create_cancel_button_margin_left"
                android:layout_marginRight="@dimen/create_cancel_button_margin_right"
                android:background="@drawable/background_buttons"
                android:text="@string/fragment_export_cancel_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/create_ok_button"
                android:layout_width="@dimen/create_ok_button_width"
                android:layout_height="@dimen/create_ok_button_height"
                android:layout_marginRight="@dimen/create_ok_button_margin_right"
                android:background="@drawable/background_buttons"
                android:text="@string/fragment_import_ok_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>